// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bundle() 1`] = `
Object {
  "content": "(function(){function r(e,n,t){function o(i,f){if(!n[i]){if(!e[i]){var c=\\"function\\"==typeof require&&require;if(!f&&c)return c(i,!0);if(u)return u(i,!0);var a=new Error(\\"Cannot find module '\\"+i+\\"'\\");throw a.code=\\"MODULE_NOT_FOUND\\",a}var p=n[i]={exports:{}};e[i][0].call(p.exports,function(r){var n=e[i][1][r];return o(n||r)},p,p.exports,r,e,n,t)}return n[i].exports}for(var u=\\"function\\"==typeof require&&require,i=0;i<t.length;i++)o(t[i]);return o}return r})()({},{},[]);
",
  "hash": "e867367ae217ade7ab1acf25afbb04cf3f3ad88cba5022e3c63a328db2124194",
}
`;

exports[`bundleIfNeeded() - produces new bundle 1`] = `
"(function(){function r(e,n,t){function o(i,f){if(!n[i]){if(!e[i]){var c=\\"function\\"==typeof require&&require;if(!f&&c)return c(i,!0);if(u)return u(i,!0);var a=new Error(\\"Cannot find module '\\"+i+\\"'\\");throw a.code=\\"MODULE_NOT_FOUND\\",a}var p=n[i]={exports:{}};e[i][0].call(p.exports,function(r){var n=e[i][1][r];return o(n||r)},p,p.exports,r,e,n,t)}return n[i].exports}for(var u=\\"function\\"==typeof require&&require,i=0;i<t.length;i++)o(t[i]);return o}return r})()({},{},[]);
"
`;

exports[`publishAssets() - invalid schema given 1`] = `
[ValidationError: Invalid 'assets' object given when attempting to publish assets. {
  [41m"tag"[0m[31m [1]: -- missing --[0m
}
[31m
[1] "asset tag" is required[0m]
`;

exports[`publishInstructions() - invalid schema given 1`] = `
[ValidationError: Invalid 'instruction' object given when attempting to publish instructions. {
  [41m"tag"[0m[31m [1]: -- missing --[0m
}
[31m
[1] "asset tag" is required[0m]
`;
